  * Removed:
    - COD::AtomNeighbours:
      - the deprecated neighbour_list_from_chemistry_openbabel_obmol()
        subroutine.
    - COD::CIF::Data::CODPredepositionCheck.
    - COD::ShowStruct.
    - STAR::Parser sources.
    - sdf_add_cod_data:
      - the deprecated --tmp-dir option.
    - cif_parse_old_star script.
    - cif_printout:
      - the deprecated --output-struct option.
    - cif_validate:
      - the deprecated --debug option.
    - cod_predeposition_check script.
    - codcif:
      - unused functions process_escapes(), strclone(), strnclone(),
        strappend() and translate_escape().
  * Fixed:
    - codcif:
      - added casts to avoid comparisons of integer expressions of
        different signedness.

cod-tools (unreleased)

  * Added:
    - COD::AtomNeighbours:
      - the neighbour_list_to_cif_datablock() subroutine.
    - COD::CIF::Data::CODFlags:
      - the has_partially_occupied_ordered_atoms() subroutine.
    - COD::CIF::Data::ExcludeFromStatistics:
      - the 'has_partially_occupied_ordered_atoms' option to
        exclude_from_statistics() subroutine.
    - cif_validate:
      - the '--range-su-multiplier' option;
      - the '--ddl1-add-dictionary', '--ddl1-dictionaries',
        '--ddl1-clear-dictionaries' options;
      - the '--ddl2-add-dictionary', '--ddl2-dictionaries',
        '--ddl2-clear-dictionaries' options.
  * Changed:
    - COD::CIF::Data::AtomList:
      - updated the datablock_from_atom_array() subroutine to ignore
        missing atom information.
    - COD::CIF::DDL::Ranges:
      - updated the is_in_range() subroutine to accept an optional
        multiplier that should be applied to the standard uncertainty (s.u.)
        when determining if a numeric value resides in the specified range.  

cod-tools (2.12)

  * Added:
    - COD::AtomNeighbours:
      - the neighbour_list_to_graph() subroutine.
    - COD::CIF::Data::CODNumbers:
      - allowing passing an option to include attached hydrogens in formula