@@ -2,7 +2,7 @@
 
 #BEGIN DEPEND------------------------------------------------------------------
 
-INPUT_SCRIPT=scripts/cif_printout_Python
+INPUT_SCRIPT=tests/scripts/cif_printout_Python
 INPUT_CIF=tests/inputs/7050234-non-ascii-text-field.cif
 
 #END DEPEND--------------------------------------------------------------------
