@@ -76,6 +76,7 @@ cod-tools (3.0.0)
     - cif_parse_old_star script.
     - cif_printout:
       - the deprecated --output-struct option.
+    - cif_printout_Python script.
     - cif_validate:
       - the deprecated --debug option.
     - cod_predeposition_check script.
